we still need to check that we have a token, fdo#51326

also fixed another dbgutil crash with gcc safe iterators

Change-Id: I5e6675a26f24329125906849c0c2286ea74e9211